--- a/viikko4/TyhjaProjekti/build.gradle
+++ b/viikko4/TyhjaProjekti/build.gradle
@@ -1,3 +1,5 @@
+plugins { id 'com.github.johnrengelman.shadow' version '1.2.4' }
+
 apply plugin: 'java'
 apply plugin: 'application'
 
@@ -7,4 +9,13 @@ jar {
     manifest {
         attributes 'Main-Class': 'ohtu.Main'
     }
+}
+
+repositories {
+    jcenter()
+}
+
+dependencies {
+    compile 'org.apache.httpcomponents:fluent-hc:4.5.3'
+	compile 'com.google.code.gson:gson:2.8.0'
 }
