--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /viikko2/NhlStatistics1/build/
 /viikko4/TyhjaProjekti/build/
 /viikko4/WebLogin/.nb-gradle/
+/viikko5/MockitoDemo/.nb-gradle/
+/viikko5/MatkakorttiMockito/build/
