--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /viikko4/WebLogin/.nb-gradle/
 /viikko5/MockitoDemo/.nb-gradle/
 /viikko5/MatkakorttiMockito/build/
+/viikko6/Laskin/.nb-gradle/
+/viikko6/QueryLanguage/.nb-gradle/
